--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -15,6 +15,8 @@
         href: ./overview/plans-environments.md
       - name: Privacy guide for admins
         href: ./overview/privacy-guide.md
+      - name: Disable Insights for Outlook
+        href: ./setup/mya-disable-insights.md
     - name: Use MyAnalytics
       items:
       - name: MyAnalytics elements
