edits to disable add-in

--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -15,7 +15,7 @@
         href: ./overview/plans-environments.md
       - name: Privacy guide for admins
         href: ./overview/privacy-guide.md
-      - name: Disable Insights for Outlook
+      - name: Disable Insights by MyAnalytics
         href: ./setup/mya-disable-insights.md
     - name: Use MyAnalytics
       items:
