--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -8,9 +8,14 @@
       href: ./overview/MyA-faq.md
     - name: MyAnalytics elements
       expanded: false
-      href: ./use/elements.md
+      href: ./use/MyA-elements.md
       items:
-
+      - name: Add-in
+        href: ./use/add-in.md
+      - name: Email digest
+        href: ./use/email-digest.md
+      - name: MyAnalytics nudges
+        href: ./use/mya-notifications.md
     - name: MyAnalytics admin guide
       href: ./overview/mya-for-admins.md
       items:
