--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -11,7 +11,7 @@
       href: ./use/MyA-elements.md
       items:
       - name: Dashboard
-        href: MyAnalytics/Use/dashboard-2.md      
+        href: ./use/dashboard-2.md      
       - name: Add-in
         href: ./use/add-in.md
       - name: Email digest
