--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -50,13 +50,13 @@
           items: 
           - name: Get started
             href: ./Use/MyA-Adoption/Indiv-adopt-get-started.md
-          - name: Diagnose your problem
+          - name: Diagnose your issue
             href: ./Use/MyA-Adoption/Indiv-adopt-diagnose.md
           - name: Set your goal
             href: ./Use/MyA-Adoption/Indiv-adopt-set-goals.md
           - name: Build your habit
             href: ./Use/MyA-Adoption/Indiv-adopt-develop-habits.md
-          - name: Sustain your change
+          - name: Sustain change
             href: ./Use/MyA-Adoption/Indiv-adopt-sustain-change.md
           - name: Resources
             href: ./Use/MyA-Adoption/Indiv-adopt-resources.md
