--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -14,9 +14,9 @@
         href: ./use/dashboard-2.md      
       - name: Add-in
         href: ./use/add-in.md
-      - name: Email digest
+      - name: Email digests
         href: ./use/email-digest-2.md
-      - name: MyAnalytics nudges
+      - name: Nudges
         href: ./use/mya-notifications.md
     - name: MyAnalytics admin guide
       href: ./overview/mya-for-admins.md
@@ -41,6 +41,8 @@
           href: ./Use/wellbeing.md
         - name: Network
           href: ./Use/network.md        
+        - name: Collaboration
+          href: MyAnalytics/Use/collaboration.md 
       - name: Adopt MyAnalytics
         href: ./Use/MyA-Adoption/Adopt-myanalytics.md  
         items: 
