--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -147,9 +147,9 @@
           href: MyAnalytics/Use/dashboard-2.md
         - name: Add-in
           href: MyAnalytics/Use/add-in.md
-        - name: Email digest
+        - name: Email digests
           href: MyAnalytics/Use/email-digest-2.md
-        - name: MyAnalytics nudges
+        - name: Nudges
           href: MyAnalytics/Use/mya-notifications.md
     - name: MyAnalytics admin guide
       href: MyAnalytics/overview/mya-for-admins.md
@@ -174,6 +174,8 @@
           href: MyAnalytics/Use/wellbeing.md
         - name: Network
           href: MyAnalytics/Use/network.md
+        - name: Collaboration
+          href: MyAnalytics/Use/collaboration.md          
       - name: Adopt MyAnalytics
         href: MyAnalytics/Use/mya-adoption/Adopt-myanalytics.md
         homepage: /myanalytics/adopt-myanalytics/    
