--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -6,29 +6,30 @@
       href: ./overview/Better-work-habits.md        
     - name: Frequently asked questions
       href: ./overview/MyA-faq.md
-    - name: Introduction
-      expanded: false
-      href: ./use/MyA-elements.md
+    - name: MyAnalytics elements
+      items: 
+        - name: Introduction 
+          href: ./use/MyA-elements.md
+        - name: Dashboard
+          href: ./use/dashboard-2.md      
+        - name: Add-in
+          href: ./use/add-in.md
+        - name: Email digests
+          href: ./use/email-digest-2.md
+        - name: Inline suggestions
+          href: ./use/mya-notifications.md
+    - name: MyAnalytics admin guide 
       items:
-      - name: Dashboard
-        href: ./use/dashboard-2.md      
-      - name: Add-in
-        href: ./use/add-in.md
-      - name: Email digests
-        href: ./use/email-digest-2.md
-      - name: Inline suggestions
-        href: ./use/mya-notifications.md
-    - name: MyAnalytics admin guide
-      href: ./overview/mya-for-admins.md
-      items:
-      - name: MyAnalytics setup
-        href: ./setup/mya-setup-checklist.md
-      - name: Plans and environments
-        href: ./overview/plans-environments.md
-      - name: Privacy guide for admins
-        href: ./overview/privacy-guide.md
-      - name: Disable Insights by MyAnalytics
-        href: ./setup/mya-disable-insights.md
+        - name: Introduction
+          href: ./overview/mya-for-admins.md
+        - name: MyAnalytics setup
+          href: ./setup/mya-setup-checklist.md
+        - name: Plans and environments
+          href: ./overview/plans-environments.md
+        - name: Privacy guide for admins
+          href: ./overview/privacy-guide.md
+        - name: Disable Insights by MyAnalytics
+          href: ./setup/mya-disable-insights.md
     - name: Use MyAnalytics
       items:
       - name: Work patterns
