--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -176,45 +176,45 @@
         - name: Collaboration
           href: MyAnalytics/Use/collaboration.md          
       - name: Adopt MyAnalytics
-        href: MyAnalytics/Use/mya-adoption/Adopt-myanalytics.md
-        homepage: /myanalytics/adopt-myanalytics/    
         items: 
-        - name: Individual adoption
-          items: 
-          - name: Get started
-            href: MyAnalytics/Use/mya-adoption/Indiv-adopt-get-started.md
-          - name: Diagnose your issue
-            href: MyAnalytics/Use/mya-adoption/Indiv-adopt-diagnose.md
-          - name: Set your goal
-            href: MyAnalytics/Use/mya-adoption/Indiv-adopt-set-goals.md
-          - name: Build your habit
-            href: MyAnalytics/Use/mya-adoption/Indiv-adopt-develop-habits.md
-          - name: Sustain change
-            href: MyAnalytics/Use/mya-adoption/Indiv-adopt-sustain-change.md
-          - name: Resources
-            href: MyAnalytics/Use/mya-adoption/Indiv-adopt-resources.md
-        - name: Team adoption
-          items: 
-          - name: Get started
-            href: MyAnalytics/Use/mya-adoption/Team-adopt-intro.md
-          - name: Plan
-            href: MyAnalytics/Use/mya-adoption/Team-adopt-plan.md
-          - name: Implement
-            href: MyAnalytics/Use/mya-adoption/Team-adopt-implement.md
-          - name: Measure
-            href: MyAnalytics/Use/mya-adoption/Team-adopt-measure.md
-          - name: Reinforce
-            href: MyAnalytics/Use/mya-adoption/Team-adopt-reinforce.md
-          - name: Resources
-            href: MyAnalytics/Use/mya-adoption/Indiv-adopt-resources.md
-        - name: Habit resources
-          items: 
-          - name: Learning modules
-            href: MyAnalytics/Use/mya-adoption/Adopt-Learning-modules.md
-            homepage: /myanalytics/use-myanalytics/adopt-myanalytics/habit-resources/learning-modules
-          - name: Habit-building method
-            href: MyAnalytics/Use/mya-adoption/Adopt-Habit-building-method.md
-            homepage: /myanalytics/use-myanalytics/adopt-myanalytics/Habit resources/habit-building-method
-          - name: Habit playbooks
-            href: MyAnalytics/Use/mya-adoption/Adopt-Habit-playbooks.md
-            homepage: /myanalytics/use-myanalytics/adopt-myanalytics/habit-resources/habit-playbooks
+          - name: Introduction 
+            href: MyAnalytics/Use/mya-adoption/Adopt-myanalytics.md 
+          - name: Individual adoption
+            items: 
+            - name: Get started
+              href: MyAnalytics/Use/mya-adoption/Indiv-adopt-get-started.md
+            - name: Diagnose your issue
+              href: MyAnalytics/Use/mya-adoption/Indiv-adopt-diagnose.md
+            - name: Set your goal
+              href: MyAnalytics/Use/mya-adoption/Indiv-adopt-set-goals.md
+            - name: Build your habit
+              href: MyAnalytics/Use/mya-adoption/Indiv-adopt-develop-habits.md
+            - name: Sustain change
+              href: MyAnalytics/Use/mya-adoption/Indiv-adopt-sustain-change.md
+            - name: Resources
+              href: MyAnalytics/Use/mya-adoption/Indiv-adopt-resources.md
+          - name: Team adoption
+            items: 
+            - name: Get started
+              href: MyAnalytics/Use/mya-adoption/Team-adopt-intro.md
+            - name: Plan
+              href: MyAnalytics/Use/mya-adoption/Team-adopt-plan.md
+            - name: Implement
+              href: MyAnalytics/Use/mya-adoption/Team-adopt-implement.md
+            - name: Measure
+              href: MyAnalytics/Use/mya-adoption/Team-adopt-measure.md
+            - name: Reinforce
+              href: MyAnalytics/Use/mya-adoption/Team-adopt-reinforce.md
+            - name: Resources
+              href: MyAnalytics/Use/mya-adoption/Indiv-adopt-resources.md
+          - name: Habit resources
+            items: 
+            - name: Learning modules
+              href: MyAnalytics/Use/mya-adoption/Adopt-Learning-modules.md
+              homepage: /myanalytics/use-myanalytics/adopt-myanalytics/habit-resources/learning-modules
+            - name: Habit-building method
+              href: MyAnalytics/Use/mya-adoption/Adopt-Habit-building-method.md
+              homepage: /myanalytics/use-myanalytics/adopt-myanalytics/Habit resources/habit-building-method
+            - name: Habit playbooks
+              href: MyAnalytics/Use/mya-adoption/Adopt-Habit-playbooks.md
+              homepage: /myanalytics/use-myanalytics/adopt-myanalytics/habit-resources/habit-playbooks
