test add focus plan to toc

--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -36,6 +36,9 @@
         items:
         - name: Focus
           href: ./Use/focus.md
+          items: 
+            - name: MyAnalytics focus plan
+              href: ./use/focus-plan.md
         - name: Wellbeing
           href: ./Use/wellbeing.md
         - name: Network
