mya toc focus plan

--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -38,7 +38,7 @@
           href: ./Use/focus.md
           items: 
             - name: MyAnalytics focus plan
-              href: ./use/focus-plan.md
+              href: ./use/mya-focus-plan.md
         - name: Wellbeing
           href: ./Use/wellbeing.md
         - name: Network
