--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -18,6 +18,8 @@
           href: ./use/email-digest-2.md
         - name: Inline suggestions
           href: ./use/mya-notifications.md
+        - name: Focus plan
+          href: ./use/focus-plan.md             
     - name: MyAnalytics admin guide 
       items:
         - name: Introduction
@@ -37,8 +39,8 @@
         - name: Focus
           href: ./Use/focus.md
           items: 
-            - name: MyAnalytics focus plan
-              href: ./use/mya-focus-plan.md
+            - name: Focus plan
+              href: ./use/focus-plan.md
         - name: Wellbeing
           href: ./Use/wellbeing.md
         - name: Network
