--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -161,6 +161,8 @@
           href: MyAnalytics/Use/email-digest-2.md
         - name: Inline suggestions
           href: MyAnalytics/Use/mya-notifications.md
+        - name: Focus plan
+          href: MyAnalytics/use/focus-plan.md       
     - name: MyAnalytics admin guide
       items: 
         - name: Introduction
@@ -180,8 +182,8 @@
         - name: Focus
           href: MyAnalytics/Use/focus.md
           items: 
-            - name: MyAnalytics focus plan
-              href: MyAnalytics/use/mya-focus-plan.md          
+            - name: Focus plan
+              href: MyAnalytics/use/focus-plan.md          
         - name: Wellbeing
           href: MyAnalytics/Use/wellbeing.md
         - name: Network
