--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -89,6 +89,8 @@
                   href: ~/tutorials/Query-basics.md 
                 - name: Person queries
                   href: ~/tutorials/Person-queries.md
+                - name: Visualize person queries
+                  href: ~/tutorials/query-visualization.md                  
                 - name: Meeting queries
                   href: ~/tutorials/Meeting-queries.md                 
                 - name: Group-to-group queries
