OE to peer analysis in the TOC

--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -81,8 +81,8 @@
                   href: ~/Use/Explore-Metrics-external-collaboration.md
                 - name: Teams collaboration
                   href: ~/Use/Explore-metrics-teams.md
-                - name: Organizational effectiveness
-                  href: ~/Use/org-effectiveness.md                    
+                - name: Peer analysis
+                  href: ~/Use/peer-analysis.md                    
                 - name: Charts
                   href: ~/Use/Chart-Types.md             
             - name: Queries
