--- a/WorkplaceAnalytics/MyAnalytics/toc.yml
+++ b/WorkplaceAnalytics/MyAnalytics/toc.yml
@@ -18,8 +18,8 @@
           href: ./use/email-digest-2.md
         - name: Inline suggestions
           href: ./use/mya-notifications.md
-        - name: Focus plan
-          href: ./use/focus-plan.md             
+  #      - name: Focus plan
+  #        href: ./use/focus-plan.md             
     - name: MyAnalytics admin guide 
       items:
         - name: Introduction
@@ -38,9 +38,9 @@
         items:
         - name: Focus
           href: ./Use/focus.md
-          items: 
-            - name: Focus plan
-              href: ./use/focus-plan.md
+ #         items: 
+ #           - name: Focus plan
+ #             href: ./use/focus-plan.md
         - name: Wellbeing
           href: ./Use/wellbeing.md
         - name: Network
