--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -178,9 +178,13 @@
         - name: Plans and environments
           href: MyAnalytics/overview/plans-environments.md
         - name: Privacy guide for admins
-          href: MyAnalytics/overview/privacy-guide.md    
+          href: MyAnalytics/overview/privacy-guide-admins.md    
     - name: Use MyAnalytics
       items:
+      - name: Data privacy
+        items:
+        - name: Privacy guide for MyAnalytics users
+          href: MyAnalytics/Overview/privacy-guide-users.md
       - name: Work patterns
         items:
         - name: Focus
