--- a/WorkplaceAnalytics/toc.yml
+++ b/WorkplaceAnalytics/toc.yml
@@ -8,7 +8,9 @@
         - name: Data-protection considerations                   
           href: ~/Privacy/data-protection-considerations.md
         - name: Privacy and data access
-          href: ~/Privacy/Privacy-and-Data-Access.md
+          href: ~/Privacy/privacy-and-data-access.md
+        - name: Data access after license expiration
+          href: ~/Privacy/license-expiration.md
     - name: Setup and Maintenance
       items:
         - name: Set up Workplace Analytics
